gcp-rpc-system/gcp-rpc-system/network.tf
resource "google_compute_subnetwork" "public" {
  name          = "public-subnet"
  ip_cidr_range = "10.0.1.0/24"

  region  = var.region
  network = google_compute_network.vpc.id
}

resource "google_compute_subnetwork" "private" {
  name          = "private-subnet"
  ip_cidr_range = "10.0.2.0/24"

  region  = var.region
  network = google_compute_network.vpc.id
}
